@@ -10,6 +10,7 @@
 
 
 Version 4.2.3
+ - Fixed: [ 2865480 ] 4.2.2 Googlemaps, Place Hierarchy not display in Chrome (wooc)
  - Fixed: [ 2871549 ] Re-named PGV folder requires manual edit of config.php (canajun2eh)
  - Fixed: [ 2869455 ] Unable to delete a research assistant folder (patch by mmoreno)
  - Added: [ 2843471 ] Remove "Remember me..." (fisharebest)
